--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
     <version>1.0-SNAPSHOT</version>
     <name>VotifierScripts</name>
     <description>Bukkit plugin that allows javacript scripts to be run based on a Votifier vote</description>
+    <licenses>
+        <license>
+            <name>Mozilla Public License 2.0</name>
+            <url>http://www.mozilla.org/MPL/2.0/</url>
+        </license>
+    </licenses>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.number>UNKNOWN</project.build.number>
