Added test strings when using /vstest and allowed for additional arguments to test those strings as well.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,7 +8,7 @@ softdepend: [Vault]
 commands:
   vstest:
     description: Tests the primary script file
-    usage: /<command> <player>
+    usage: /<command> <player> [service [address [timestamp]]]
     permission: votifierscripts.test
 
 permissions:
